package MeuAPI;

public class ArtistasFav {
    private String nome;

    public ArtistasFav(String nome) {
        this.nome = nome;
    }

    public String getNome() { return nome; }
}

