package MeuAPI;

public class OqueGosta {
    private String interesse;

    public OqueGosta(String interesse) {
        this.interesse = interesse;
    }

    public String getInteresse() { return interesse; }
}