package MeuAPI;

public class Rotina {
    private String atividade;

    public Rotina(String atividade) {
        this.atividade = atividade;
    }

    public String getAtividade() { return atividade; }
}